--- a/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -155,15 +155,17 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
-OpenAssetsAtExit=/Game/LDK/Door_4x2.Door_4x2
-OpenAssetsAtExit=/Game/LDK/Door_4x4.Door_4x4
+CleanShutdown=False
+OpenAssetsAtExit=/Game/StarterContent/Materials/M_Glass.M_Glass
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -401,6 +403,66 @@ SphereReflectionCapture.Tags=True
 SphereReflectionCapture.Cooking=True
 SphereReflectionCapture.Replication=True
 SphereReflectionCapture.Input=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.RayTracing=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+Brush.TransformCommon=True
+Brush.BrushSettings=True
+Brush.Replication=True
+Brush.Actor=True
+Generic.Surface Materials=True
+Generic.Geometry=True
+Generic.Surface Properties=True
+LightmassPrimitiveSettingsObject.Lightmass=True
+Brush.Surface Materials=True
+Brush.Geometry=True
+Brush.Surface Properties=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -513,45 +575,87 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [PlacementMode]
-RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Ocean.M_Water_Ocean;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake;
-RecentlyPlaced=/Game/LDK/Floor_4x4.Floor_4x4;
-RecentlyPlaced=/Game/LDK/Floor_1x1.Floor_1x1;
 RecentlyPlaced=/Game/LDK/Window_4x2.Window_4x2;
-RecentlyPlaced=/Game/LDK/Wall_4x2.Wall_4x2;
-RecentlyPlaced=/Game/LDK/Door_4x2.Door_4x2;
-RecentlyPlaced=/Game/LDK/Window_4x4.Window_4x4;
-RecentlyPlaced=/Game/LDK/Wall_4x4.Wall_4x4;
-RecentlyPlaced=/Game/LDK/Corner_4x1.Corner_4x1;
-RecentlyPlaced=/Game/LDK/Corner_2x1.Corner_2x1;
-RecentlyPlaced=/Game/LDK/Wall_1x1.Wall_1x1;
-RecentlyPlaced=/Game/LDK/Corner_1x1.Corner_1x1;
-RecentlyPlaced=/Game/LDK/wall_2x1.wall_2x1;
 RecentlyPlaced=/Game/LDK/Wall_4x1.Wall_4x1;
+RecentlyPlaced=/Game/LDK/Wall_4x2.Wall_4x2;
+RecentlyPlaced=/Game/LDK/Wall_2x2.Wall_2x2;
+RecentlyPlaced=/Game/LDK/Corner_4x1.Corner_4x1;
 RecentlyPlaced=/Game/LDK/Wall_2x4.Wall_2x4;
-RecentlyPlaced=/Game/LDK/Slope_1x1.Slope_1x1;
 RecentlyPlaced=/Game/LDK/Pillar_2m.Pillar_2m;
+RecentlyPlaced=/Game/LDK/Corner_1x1.Corner_1x1;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Ocean.M_Water_Ocean;
+RecentlyPlaced=/Game/LDK/Floor_2x2.Floor_2x2;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/LDK/Floor_1x1.Floor_1x1;
+RecentlyPlaced=/Game/LDK/Floor_4x4.Floor_4x4;
+RecentlyPlaced=/Game/LDK/Window_4x4.Window_4x4;
+RecentlyPlaced=/Game/LDK/Door_4x4.Door_4x4;
+RecentlyPlaced=/Game/LDK/lambert1.lambert1;
+RecentlyPlaced=/Game/LDK/Pillar_4m.Pillar_4m;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/LDK/Door_4x4
-MRUItem1=/Game/FirstPersonBP/LDK/Door_4x2
-MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem3=/Game/FirstPersonBP/LDK/Wall_1x1
-MRUItem4=/Game/FirstPersonBP/LDK/Window_4x4
-MRUItem5=/Game/FirstPersonBP/LDK/Slope_1x1
+MRUItem0=/Game/StarterContent/Materials/M_Glass
+MRUItem1=/Game/StarterContent/Materials/M_Water_Ocean
+MRUItem2=/Game/LDK/Wall_1x2
+MRUItem3=/Game/LDK/Wall_1x4
+MRUItem4=/Game/LDK/wall_2x1
+MRUItem5=/Game/LDK/Wall_2x2
+MRUItem6=/Game/LDK/Wall_2x4
+MRUItem7=/Game/LDK/Wall_4x1
+MRUItem8=/Game/LDK/Wall_4x2
+MRUItem9=/Game/LDK/Window_4x2
+MRUItem10=/Game/LDK/Wall_4x4
+MRUItem11=/Game/LDK/Window_4x4
+MRUItem12=/Game/LDK/Wall_1x1
+MRUItem13=/Game/LDK/Slope_4x4
+MRUItem14=/Game/LDK/Slope_2x2
+MRUItem15=/Game/LDK/Pillar_4m
+MRUItem16=/Game/LDK/Slope_1x1
+MRUItem17=/Game/LDK/Floor_4x4
+MRUItem18=/Game/LDK/Floor_1x1
+MRUItem19=/Game/LDK/Door_4x4
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/LDK/Wall_1x1.Wall_1x1=1
 /Game/FirstPersonBP/LDK/Window_4x4.Window_4x4=1
 /Game/FirstPersonBP/LDK/Slope_1x1.Slope_1x1=1
+/Game/LDK/Wall_1x2.Wall_1x2=1
+/Game/LDK/Wall_1x4.Wall_1x4=1
+/Game/LDK/Pillar_4m.Pillar_4m=1
+/Game/LDK/Floor_4x4.Floor_4x4=1
+/Game/LDK/Slope_1x1.Slope_1x1=1
+/Game/LDK/Floor_1x1.Floor_1x1=1
+/Game/LDK/Door_4x4.Door_4x4=1
+/Game/LDK/Door_4x2.Door_4x2=1
+/Game/LDK/Corner_4x1.Corner_4x1=1
+/Game/LDK/Corner_2x1.Corner_2x1=1
+/Game/LDK/Pillar_2m.Pillar_2m=1
+/Game/LDK/Floor_2x2.Floor_2x2=1
+/Game/LDK/Corner_1x1.Corner_1x1=1
+/Game/LDK/Wall_1x1.Wall_1x1=1
+/Game/LDK/Slope_4x4.Slope_4x4=1
+/Game/LDK/Slope_2x2.Slope_2x2=1
+/Game/LDK/Window_4x4.Window_4x4=1
+/Game/LDK/Wall_4x4.Wall_4x4=1
+/Game/LDK/Wall_4x2.Wall_4x2=1
+/Game/LDK/Window_4x2.Window_4x2=1
+/Game/LDK/Wall_4x1.Wall_4x1=1
+/Game/LDK/Wall_2x4.Wall_2x4=1
+/Game/LDK/Wall_2x2.Wall_2x2=1
+/Game/LDK/wall_2x1.wall_2x1=1
+/Game/StarterContent/Materials/M_Water_Ocean.M_Water_Ocean=1
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMeshActor=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1502,4 +1606,70 @@ BlueprintGraph.TimeStamp=2022.02.28-08.13.04
 BlueprintGraph.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.02.28-08.13.07
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[PluginBrowser]
+InstalledPlugins=XRVisualization
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
