--- a/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -160,10 +160,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
-OpenAssetsAtExit=/Game/LDK/Door_4x2.Door_4x2
-OpenAssetsAtExit=/Game/LDK/Door_4x4.Door_4x4
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -513,7 +510,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 
 [PlacementMode]
 RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Ocean.M_Water_Ocean;
@@ -1502,4 +1499,7 @@ BlueprintGraph.TimeStamp=2022.02.28-08.13.04
 BlueprintGraph.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.02.28-08.13.07
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+
+[PluginBrowser]
+InstalledPlugins=XRVisualization
 
