--- a/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -164,8 +164,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/StarterContent/Materials/M_Glass.M_Glass
+CleanShutdown=True
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -463,6 +462,7 @@ MaterialExpressionScalarParameter.General=True
 MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
 MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialExpressionScalarParameter.CustomPrimitiveData=True
+BP_Sky_Sphere_C.Tick=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -578,14 +578,15 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [PlacementMode]
-RecentlyPlaced=/Game/LDK/Window_4x2.Window_4x2;
-RecentlyPlaced=/Game/LDK/Wall_4x1.Wall_4x1;
 RecentlyPlaced=/Game/LDK/Wall_4x2.Wall_4x2;
-RecentlyPlaced=/Game/LDK/Wall_2x2.Wall_2x2;
+RecentlyPlaced=/Game/LDK/Wall_4x1.Wall_4x1;
+RecentlyPlaced=/Game/LDK/Corner_2x1.Corner_2x1;
 RecentlyPlaced=/Game/LDK/Corner_4x1.Corner_4x1;
+RecentlyPlaced=/Game/LDK/Corner_1x1.Corner_1x1;
+RecentlyPlaced=/Game/LDK/Window_4x2.Window_4x2;
+RecentlyPlaced=/Game/LDK/Wall_2x2.Wall_2x2;
 RecentlyPlaced=/Game/LDK/Wall_2x4.Wall_2x4;
 RecentlyPlaced=/Game/LDK/Pillar_2m.Pillar_2m;
-RecentlyPlaced=/Game/LDK/Corner_1x1.Corner_1x1;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Ocean.M_Water_Ocean;
@@ -597,29 +598,28 @@ RecentlyPlaced=/Game/LDK/Window_4x4.Window_4x4;
 RecentlyPlaced=/Game/LDK/Door_4x4.Door_4x4;
 RecentlyPlaced=/Game/LDK/lambert1.lambert1;
 RecentlyPlaced=/Game/LDK/Pillar_4m.Pillar_4m;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Materials/M_Glass
-MRUItem1=/Game/StarterContent/Materials/M_Water_Ocean
-MRUItem2=/Game/LDK/Wall_1x2
-MRUItem3=/Game/LDK/Wall_1x4
-MRUItem4=/Game/LDK/wall_2x1
-MRUItem5=/Game/LDK/Wall_2x2
-MRUItem6=/Game/LDK/Wall_2x4
-MRUItem7=/Game/LDK/Wall_4x1
-MRUItem8=/Game/LDK/Wall_4x2
-MRUItem9=/Game/LDK/Window_4x2
-MRUItem10=/Game/LDK/Wall_4x4
-MRUItem11=/Game/LDK/Window_4x4
-MRUItem12=/Game/LDK/Wall_1x1
-MRUItem13=/Game/LDK/Slope_4x4
-MRUItem14=/Game/LDK/Slope_2x2
-MRUItem15=/Game/LDK/Pillar_4m
-MRUItem16=/Game/LDK/Slope_1x1
-MRUItem17=/Game/LDK/Floor_4x4
-MRUItem18=/Game/LDK/Floor_1x1
-MRUItem19=/Game/LDK/Door_4x4
+MRUItem0=/Engine/EngineSky/BP_Sky_Sphere
+MRUItem1=/Game/StarterContent/Materials/M_Glass
+MRUItem2=/Game/StarterContent/Materials/M_Water_Ocean
+MRUItem3=/Game/LDK/Wall_1x2
+MRUItem4=/Game/LDK/Wall_1x4
+MRUItem5=/Game/LDK/wall_2x1
+MRUItem6=/Game/LDK/Wall_2x2
+MRUItem7=/Game/LDK/Wall_2x4
+MRUItem8=/Game/LDK/Wall_4x1
+MRUItem9=/Game/LDK/Wall_4x2
+MRUItem10=/Game/LDK/Window_4x2
+MRUItem11=/Game/LDK/Wall_4x4
+MRUItem12=/Game/LDK/Window_4x4
+MRUItem13=/Game/LDK/Wall_1x1
+MRUItem14=/Game/LDK/Slope_4x4
+MRUItem15=/Game/LDK/Slope_2x2
+MRUItem16=/Game/LDK/Pillar_4m
+MRUItem17=/Game/LDK/Slope_1x1
+MRUItem18=/Game/LDK/Floor_4x4
+MRUItem19=/Game/LDK/Floor_1x1
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/LDK/Wall_1x1.Wall_1x1=1
@@ -650,6 +650,8 @@ MRUItem19=/Game/LDK/Door_4x4
 /Game/LDK/Wall_2x2.Wall_2x2=1
 /Game/LDK/wall_2x1.wall_2x1=1
 /Game/StarterContent/Materials/M_Water_Ocean.M_Water_Ocean=1
+/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere=1
+/Game/StarterContent/Materials/M_Glass.M_Glass=1
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1608,7 +1610,6 @@ HierarchicalLODUtilities.TimeStamp=2022.02.28-08.13.07
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
