--- a/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -463,6 +463,7 @@ MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
 MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialExpressionScalarParameter.CustomPrimitiveData=True
 BP_Sky_Sphere_C.Tick=True
+MeshPaintModeSettings.Visualization=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -579,25 +580,25 @@ LastLogListing=PIE
 
 [PlacementMode]
 RecentlyPlaced=/Game/LDK/Wall_4x2.Wall_4x2;
-RecentlyPlaced=/Game/LDK/Wall_4x1.Wall_4x1;
-RecentlyPlaced=/Game/LDK/Corner_2x1.Corner_2x1;
-RecentlyPlaced=/Game/LDK/Corner_4x1.Corner_4x1;
-RecentlyPlaced=/Game/LDK/Corner_1x1.Corner_1x1;
+RecentlyPlaced=/Game/LDK/Door_4x2.Door_4x2;
 RecentlyPlaced=/Game/LDK/Window_4x2.Window_4x2;
+RecentlyPlaced=/Game/LDK/Wall_4x1.Wall_4x1;
+RecentlyPlaced=/Game/LDK/Window_4x4.Window_4x4;
+RecentlyPlaced=/Game/LDK/Floor_2x2.Floor_2x2;
+RecentlyPlaced=/Game/LDK/Corner_4x1.Corner_4x1;
+RecentlyPlaced=/Game/LDK/Floor_4x4.Floor_4x4;
+RecentlyPlaced=/Game/LDK/Pillar_4m.Pillar_4m;
+RecentlyPlaced=/Game/LDK/Corner_1x1.Corner_1x1;
+RecentlyPlaced=/Game/LDK/Corner_2x1.Corner_2x1;
 RecentlyPlaced=/Game/LDK/Wall_2x2.Wall_2x2;
 RecentlyPlaced=/Game/LDK/Wall_2x4.Wall_2x4;
 RecentlyPlaced=/Game/LDK/Pillar_2m.Pillar_2m;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Ocean.M_Water_Ocean;
-RecentlyPlaced=/Game/LDK/Floor_2x2.Floor_2x2;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/LDK/Floor_1x1.Floor_1x1;
-RecentlyPlaced=/Game/LDK/Floor_4x4.Floor_4x4;
-RecentlyPlaced=/Game/LDK/Window_4x4.Window_4x4;
 RecentlyPlaced=/Game/LDK/Door_4x4.Door_4x4;
-RecentlyPlaced=/Game/LDK/lambert1.lambert1;
-RecentlyPlaced=/Game/LDK/Pillar_4m.Pillar_4m;
 
 [ContentBrowserRecent]
 MRUItem0=/Engine/EngineSky/BP_Sky_Sphere
