--- a/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -177,7 +177,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/NewScene
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -787,9 +787,10 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 
 [PlacementMode]
+RecentlyPlaced=/Game/WorldGridMaterialtest.WorldGridMaterialtest;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/LDK/Wall_4x1.Wall_4x1;
 RecentlyPlaced=/Game/LDK/Window_4x2.Window_4x2;
@@ -805,19 +806,18 @@ RecentlyPlaced=/Game/LDK/Door_4x2.Door_4x2;
 RecentlyPlaced=/Game/LDK/Corner_2x1.Corner_2x1;
 RecentlyPlaced=/Game/LDK/Corner_1x1.Corner_1x1;
 RecentlyPlaced=/Game/LDK/Door_4x4.Door_4x4;
-RecentlyPlaced=/Game/WorldGridMaterialtest.WorldGridMaterialtest;
 RecentlyPlaced=/Game/LDK/Pillar_4m.Pillar_4m;
 RecentlyPlaced=/Game/LDK/Wall_2x2.Wall_2x2;
 RecentlyPlaced=/Game/LDK/Wall_1x1.Wall_1x1;
 RecentlyPlaced=/Game/LDK/Wall_1x2.Wall_1x2;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/standinGate
-MRUItem1=/Game/LDK/Window_4x4
-MRUItem2=/Game/WorldGridMaterialtest
-MRUItem3=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem4=/Game/Stair
-MRUItem5=/Game/NewScene
+MRUItem0=/Game/NewScene
+MRUItem1=/Game/standinGate
+MRUItem2=/Game/LDK/Window_4x4
+MRUItem3=/Game/WorldGridMaterialtest
+MRUItem4=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem5=/Game/Stair
 MRUItem6=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem7=/Game/StarterContent/Materials/M_Glass
 MRUItem8=/Game/LDK/Window_4x2
@@ -880,6 +880,7 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
