--- a/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,6 +133,7 @@ DecimalGridSizes=100.000000
 DecimalGridSizes=200.000000
 DecimalGridSizes=400.000000
 DecimalGridSizes=800.000000
+CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/NewScene
@@ -145,7 +146,7 @@ OnlyBuildVisibility=False
 QualityLevel=1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/LDK
+ContentBrowserTab1.SelectedPaths=/Game/LD_props
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -178,6 +179,7 @@ LastLevel=/Game/NewScene
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/StarterContent/Materials/M_Glass.M_Glass
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -678,6 +680,46 @@ LogVisualizerSettings.VisualLogger=True
 Actor.Surface Materials=True
 Actor.Geometry=True
 Actor.Surface Properties=True
+Character.TransformCommon=True
+Character.Animation=True
+Character.Mesh=True
+Character.Clothing=True
+Character.Physics=True
+Character.Collision=True
+Character.MasterPoseComponent=True
+Character.Lighting=True
+Character.ClothingSimulation=True
+Character.Rendering=True
+Character.SkinWeights=True
+Character.Navigation=True
+Character.VirtualTexture=True
+Character.Tags=True
+Character.Activation=True
+Character.Cooking=True
+Character.Character Movement (General Settings)=True
+Character.Character Movement: Walking=True
+Character.Character Movement: Jumping / Falling=True
+Character.Character Movement (Networking)=True
+Character.Character Movement: Swimming=True
+Character.Character Movement: Flying=True
+Character.Character Movement: Custom Movement=True
+Character.Character Movement (Rotation Settings)=True
+Character.Character Movement: Physics Interaction=True
+Character.Character Movement=True
+Character.Character Movement: Avoidance=True
+Character.RootMotion=True
+Character.Character Movement: NavMesh Movement=True
+Character.NavMovement=True
+Character.Velocity=True
+Character.PlanarMovement=True
+Character.MovementComponent=True
+Character.Shape=True
+Character.Character=True
+Character.Camera=True
+Character.Pawn=True
+Character.Replication=True
+Character.Input=True
+Character.Actor=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -790,39 +832,39 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [PlacementMode]
-RecentlyPlaced=/Game/LDK/Pillar_4m.Pillar_4m;
-RecentlyPlaced=/Game/LDK/Slope_4x4.Slope_4x4;
-RecentlyPlaced=/Game/LDK/Slope_2x2.Slope_2x2;
-RecentlyPlaced=/Game/LD_WizardTower/Wtower_floor.Wtower_floor;
-RecentlyPlaced=/Game/LD_WizardTower/Wtower_overhangroom.Wtower_overhangroom;
-RecentlyPlaced=/Game/LD_WizardTower/Wtower_sidetower.Wtower_sidetower;
-RecentlyPlaced=/Game/LD_WizardTower/Wtower_sidetower_base.Wtower_sidetower_base;
-RecentlyPlaced=/Game/LD_WizardTower/Wtower_sidetower_roof.Wtower_sidetower_roof;
-RecentlyPlaced=/Game/LD_WizardTower/WTower_base.WTower_base;
-RecentlyPlaced=/Game/LD_WizardTower/Wtower_6munit.Wtower_6munit;
-RecentlyPlaced=/Game/LD_WizardTower/Wtower_4munit_var.Wtower_4munit_var;
-RecentlyPlaced=/Game/LD_WizardTower/Wtower_4munit.Wtower_4munit;
-RecentlyPlaced=/Game/WorldGridMaterialtest.WorldGridMaterialtest;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/LDK/Wall_4x1.Wall_4x1;
+RecentlyPlaced=/Game/LD_props/Barrel.Barrel;
+RecentlyPlaced=/Game/LD_props/Box.Box;
+RecentlyPlaced=/Game/LDK/Wall_1x1.Wall_1x1;
+RecentlyPlaced=/Game/LDK/Wall_1x2.Wall_1x2;
+RecentlyPlaced=/Game/LDK/Corner_1x1.Corner_1x1;
+RecentlyPlaced=/Game/LDK/Wall_1x4.Wall_1x4;
+RecentlyPlaced=/Game/LDK/Corner_4x1.Corner_4x1;
 RecentlyPlaced=/Game/LDK/Window_4x2.Window_4x2;
 RecentlyPlaced=/Game/LDK/Wall_4x2.Wall_4x2;
-RecentlyPlaced=/Game/LDK/Corner_4x1.Corner_4x1;
+RecentlyPlaced=/Game/LDK/wall_2x1.wall_2x1;
 RecentlyPlaced=/Game/LDK/Window_4x4.Window_4x4;
-RecentlyPlaced=/Game/LDK/Floor_4x4.Floor_4x4;
+RecentlyPlaced=/Game/LDK/Window_4x4_open.Window_4x4_open;
+RecentlyPlaced=/Game/LDK/Door_4x4.Door_4x4;
+RecentlyPlaced=/Game/LDK/Wall_4x4.Wall_4x4;
+RecentlyPlaced=/Game/LDK/Wall_2x2.Wall_2x2;
+RecentlyPlaced=/Game/LDK/Door_4x2.Door_4x2;
+RecentlyPlaced=/Game/LDK/Pillar_4m.Pillar_4m;
+RecentlyPlaced=/Game/LDK/Pillar_2m.Pillar_2m;
+RecentlyPlaced=/Game/LDK/Wall_4x1.Wall_4x1;
+RecentlyPlaced=/Game/LDK/Floor_1x1.Floor_1x1;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/NewScene
-MRUItem1=/Game/standinGate
-MRUItem2=/Game/LDK/Window_4x4
-MRUItem3=/Game/WorldGridMaterialtest
-MRUItem4=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem5=/Game/Stair
-MRUItem6=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem7=/Game/StarterContent/Materials/M_Glass
+MRUItem0=/Game/StarterContent/Materials/M_Glass
+MRUItem1=/Game/NewScene
+MRUItem2=/Game/standinGate
+MRUItem3=/Game/LDK/Window_4x4
+MRUItem4=/Game/WorldGridMaterialtest
+MRUItem5=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem6=/Game/Stair
+MRUItem7=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem8=/Game/LDK/Window_4x2
 MRUItem9=/Game/LDK/Wall_4x4
 MRUItem10=/Game/LDK/Wall_4x2
@@ -1838,7 +1880,6 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
