--- a/SunkenCity/Config/DefaultEngine.ini
+++ b/SunkenCity/Config/DefaultEngine.ini
@@ -30,3 +30,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/SunkenCity")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/SunkenCity")
 
+[/Script/Engine.RendererSettings]
+r.GenerateMeshDistanceFields=True
+r.DistanceFieldBuild.Compress=True
+
