--- a/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,6 +135,7 @@ DecimalGridSizes=400.000000
 DecimalGridSizes=800.000000
 CurrentRotGridSize=0
 CameraSpeed=5
+CurrentPosGridSize=1
 
 [MRU]
 MRUItem0=/Game/NewScene
@@ -996,6 +997,7 @@ MaterialEditorInstanceConstant.Previewing=True
 StaticMeshActor.Surface Materials=True
 StaticMeshActor.Geometry=True
 StaticMeshActor.Surface Properties=True
+StaticMeshActor.MaterialParameters=False
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1111,40 +1113,40 @@ bConvertSceneUnit=False
 LastLogListing=LightingResults
 
 [PlacementMode]
-RecentlyPlaced=/Game/AP_Castle/Castle_portcullis.Castle_portcullis;
+RecentlyPlaced=/Game/Arches/Arch_2m_right.Arch_2m_right;
+RecentlyPlaced=/Game/AP_Castle/Battlement_piece_4m.Battlement_piece_4m;
+RecentlyPlaced=/Game/AP_Castle/Castle_wall_piece_4x4_top_var_.Castle_wall_piece_4x4_top_var_;
+RecentlyPlaced=/Game/AP_Castle/Castle_wall_piece_4x4_middle.Castle_wall_piece_4x4_middle;
+RecentlyPlaced=/Game/AP_Castle/Castle_gate_8x8.Castle_gate_8x8;
+RecentlyPlaced=/Game/AP_Castle/Castle_wall_piece_4x4_top.Castle_wall_piece_4x4_top;
+RecentlyPlaced=/Game/LDK/Floor_4x4.Floor_4x4;
+RecentlyPlaced=/Game/LDK/Floor_1x1.Floor_1x1;
 RecentlyPlaced=/Game/AP_Castle/Fern_var__1.Fern_var__1;
+RecentlyPlaced=/Game/AP_Castle/Iron_fence_2m.Iron_fence_2m;
+RecentlyPlaced=/Game/AP_Castle/Castle_portcullis.Castle_portcullis;
+RecentlyPlaced=/Game/AP_Castle/Iron_fence_broken.Iron_fence_broken;
 RecentlyPlaced=/Game/AP_Castle/Big_plant.Big_plant;
 RecentlyPlaced=/Game/AP_Castle/Mushroom_cap.Mushroom_cap;
 RecentlyPlaced=/Game/AP_Castle/Mushroom_var__1.Mushroom_var__1;
 RecentlyPlaced=/Game/Materials/M_Lillypad.M_Lillypad;
 RecentlyPlaced=/Game/LD_props/Lilypad.Lilypad;
 RecentlyPlaced=/Game/Materials/M_MushroomTest.M_MushroomTest;
-RecentlyPlaced=/Game/AP_Castle/Iron_fence_broken.Iron_fence_broken;
-RecentlyPlaced=/Game/AP_Castle/Iron_fence_2m.Iron_fence_2m;
 RecentlyPlaced=/Game/LDK/Window_4x2_open.Window_4x2_open;
 RecentlyPlaced=/Game/LDK/Pillar_2m.Pillar_2m;
-RecentlyPlaced=/Game/AP_Castle/Fern_var__2.Fern_var__2;
-RecentlyPlaced=/Game/AP_Castle/Iron_fence_corner_2m.Iron_fence_corner_2m;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Sandstone.M_Rock_Sandstone;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel;
-RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
-RecentlyPlaced=/Game/StarterContent/Materials/M_ColorGrid_LowSpec.M_ColorGrid_LowSpec;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LD_props/Lilypad
-MRUItem1=/Game/Materials/M_Lillypad
-MRUItem2=/Game/AP_Castle/Mushroom_cap
-MRUItem3=/Game/AP_Castle/Mushroom_var__1
-MRUItem4=/Game/Materials/M_MushroomTest
-MRUItem5=/Game/AP_Castle/Big_plant
-MRUItem6=/Game/AP_Castle/Fern_var__2
-MRUItem7=/Game/AP_Castle/Fern_var__1
-MRUItem8=/Game/Materials/M_Green
-MRUItem9=/Game/Materials/Master_Basic
-MRUItem10=/Game/AP_Castle/Iron_fence_broken
-MRUItem11=/Game/NewScene
+MRUItem0=/Game/NewScene
+MRUItem1=/Game/LD_props/Lilypad
+MRUItem2=/Game/Materials/M_Lillypad
+MRUItem3=/Game/AP_Castle/Mushroom_cap
+MRUItem4=/Game/AP_Castle/Mushroom_var__1
+MRUItem5=/Game/Materials/M_MushroomTest
+MRUItem6=/Game/AP_Castle/Big_plant
+MRUItem7=/Game/AP_Castle/Fern_var__2
+MRUItem8=/Game/AP_Castle/Fern_var__1
+MRUItem9=/Game/Materials/M_Green
+MRUItem10=/Game/Materials/Master_Basic
+MRUItem11=/Game/AP_Castle/Iron_fence_broken
 MRUItem12=/Game/M_SwampYwater
 MRUItem13=/Game/M_WATER
 MRUItem14=/Game/StarterContent/Materials/M_Glass
@@ -1211,7 +1213,7 @@ MRUItem19=/Game/LDK/Window_4x4
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMeshActor=
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" "
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -2245,6 +2247,7 @@ bMaterialQualityUsed[3]=0
 [DetailCategoriesAdvanced]
 Brush.BrushSettings=True
 LevelEditorViewportSettings.GridSnapping=True
+StaticMeshActor.StaticMesh=True
 
 [SuppressableDialogs]
 Warning_EditingDefaultMaterial=False
