--- a/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,7 +146,7 @@ OnlyBuildVisibility=False
 QualityLevel=1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/AP_Castle
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -1133,8 +1133,8 @@ RecentlyPlaced=/Game/LDK/Wall_2x4.Wall_2x4;
 RecentlyPlaced=/Game/LDK/Wall_4x1.Wall_4x1;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/Invisible
-MRUItem1=/Game/NewScene
+MRUItem0=/Game/NewScene
+MRUItem1=/Game/Materials/Invisible
 MRUItem2=/Game/LD_props/Lilypad
 MRUItem3=/Game/Materials/M_Lillypad
 MRUItem4=/Game/AP_Castle/Mushroom_cap
