still some stuff left

--- a/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SunkenCity/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -177,7 +177,8 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/NewScene
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Linear_Stair_Brush3_StaticMesh.Linear_Stair_Brush3_StaticMesh
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -1032,6 +1033,8 @@ VolumetricCloud.Activation=True
 VolumetricCloud.Cooking=True
 VolumetricCloud.Replication=True
 VolumetricCloud.Actor=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1147,48 +1150,48 @@ bConvertSceneUnit=False
 LastLogListing=LightingResults
 
 [PlacementMode]
-RecentlyPlaced=/Game/Materials/M_Lillypad.M_Lillypad;
-RecentlyPlaced=/Game/Materials/M_GrayHouse.M_GrayHouse;
-RecentlyPlaced=/Game/AP_Castle/C_walls_twosided/Pillar.Pillar;
+RecentlyPlaced=/Game/AP_Castle/Fern_var__2.Fern_var__2;
+RecentlyPlaced=/Game/AP_Castle/Fern_var__1.Fern_var__1;
+RecentlyPlaced=/Game/AP_Castle/Big_plant.Big_plant;
 RecentlyPlaced=/Game/AP_Castle/Mushroom_cap.Mushroom_cap;
 RecentlyPlaced=/Game/AP_props/Barrel.Barrel;
+RecentlyPlaced=/Game/Materials/M_GrayHouse.M_GrayHouse;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/AP_floorpieces/stone_floor_4x4.stone_floor_4x4;
+RecentlyPlaced=/Game/awning.awning;
+RecentlyPlaced=/Game/Materials/M_GlowingLantern.M_GlowingLantern;
+RecentlyPlaced=/Game/lightpost_fix_polySurface1390.lightpost_fix_polySurface1390;
+RecentlyPlaced=/Game/Materials/M_Lillypad.M_Lillypad;
+RecentlyPlaced=/Game/AP_Castle/C_walls_twosided/Pillar.Pillar;
 RecentlyPlaced=/Game/AP_houses/Trims/Uppertrims/Upper_trim_inner_corner.Upper_trim_inner_corner;
 RecentlyPlaced=/Game/AP_houses/Trims/Uppertrims/Upper_trim_2m.Upper_trim_2m;
 RecentlyPlaced=/Game/LDK/Floor_1x1.Floor_1x1;
 RecentlyPlaced=/Game/AP_houses/Roofpieces/Roof_inner_corner.Roof_inner_corner;
 RecentlyPlaced=/Game/AP_houses/Trims/Middletrims/Middle_trim_outer_corner.Middle_trim_outer_corner;
 RecentlyPlaced=/Game/AP_Castle/C_walls_twosided/Battlement.Battlement;
-RecentlyPlaced=/Game/AP_Castle/Big_plant.Big_plant;
 RecentlyPlaced=/Game/LD_WizardTower/Wtower_overhangroom.Wtower_overhangroom;
-RecentlyPlaced=/Game/AP_houses/Trims/Middletrims/Middle_trim_2m.Middle_trim_2m;
-RecentlyPlaced=/Game/AP_Castle/Fern_var__2.Fern_var__2;
-RecentlyPlaced=/Game/AP_Castle/Fern_var__1.Fern_var__1;
-RecentlyPlaced=/Game/AP_Castle/Mushroom_var__1.Mushroom_var__1;
-RecentlyPlaced=/Game/LD_WizardTower/Wtower_roof.Wtower_roof;
-RecentlyPlaced=/Game/LD_WizardTower/Wtower_6munit.Wtower_6munit;
-RecentlyPlaced=/Game/LD_WizardTower/Wtower_4munit_var.Wtower_4munit_var;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/M_GrayHouse
-MRUItem1=/Game/AP_houses/Trims/Middletrims/Middle_trim_outer_corner
-MRUItem2=/Game/AP_houses/Trims/Middletrims/Middle_trim_inner_corner
-MRUItem3=/Game/AP_houses/Trims/Middletrims/Middle_trim_2m
-MRUItem4=/Game/AP_houses/Trims/Middletrims/Middle_trim_1m
-MRUItem5=/Game/NewScene
-MRUItem6=/Game/AP_Castle/Castle_portcullis
-MRUItem7=/Game/Materials/M_PitchBlack
-MRUItem8=/Game/AP_ironfences/Fence_gate
-MRUItem9=/Game/AP_ironfences/Gate_frame
-MRUItem10=/Game/AP_props/Barrel
-MRUItem11=/Game/AP_props/Cattail
-MRUItem12=/Game/AP_props/Lightpost
-MRUItem13=/Game/AP_Bridges/bridge_w_pillar
-MRUItem14=/Game/AP_Bridges/bridge_no_pillar
-MRUItem15=/Game/LD_WizardTower/Wtower_sidetower_roof
-MRUItem16=/Game/LD_WizardTower/Wtower_sidetower_base
-MRUItem17=/Game/LD_WizardTower/Wtower_sidetower
-MRUItem18=/Game/LD_WizardTower/Wtower_roof
-MRUItem19=/Game/LD_WizardTower/Wtower_overhangroom
+MRUItem0=/Game/Linear_Stair_Brush_StaticMesh
+MRUItem1=/Game/Linear_Stair_Brush3_StaticMesh
+MRUItem2=/Game/AP_Castle/Castletowers/4m_tower_base
+MRUItem3=/Game/lightpost_fix_polySurface1390
+MRUItem4=/Game/lightpost_fix_polySurface1396
+MRUItem5=/Game/4x1_door_open
+MRUItem6=/Game/LDK/Floor_4x4
+MRUItem7=/Game/AP_floorpieces/wood_floor_4x4
+MRUItem8=/Game/AP_floorpieces/wood_floor_2x2
+MRUItem9=/Game/AP_floorpieces/stone_floor_4x4
+MRUItem10=/Game/AP_floorpieces/stone_floor_2x2
+MRUItem11=/Game/AP_floorpieces/stone_floor_1x1
+MRUItem12=/Game/Materials/Lantern
+MRUItem13=/Game/Materials/M_GlowingLantern
+MRUItem14=/Game/NewScene
+MRUItem15=/Game/Materials/M_GrayHouse
+MRUItem16=/Game/AP_houses/Trims/Middletrims/Middle_trim_outer_corner
+MRUItem17=/Game/AP_houses/Trims/Middletrims/Middle_trim_inner_corner
+MRUItem18=/Game/AP_houses/Trims/Middletrims/Middle_trim_2m
+MRUItem19=/Game/AP_houses/Trims/Middletrims/Middle_trim_1m
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/LDK/Wall_1x1.Wall_1x1=1
@@ -1317,11 +1320,22 @@ MRUItem19=/Game/LD_WizardTower/Wtower_overhangroom
 /Game/AP_houses/Trims/Middletrims/Middle_trim_2m.Middle_trim_2m=1
 /Game/AP_houses/Trims/Middletrims/Middle_trim_inner_corner.Middle_trim_inner_corner=1
 /Game/AP_houses/Trims/Middletrims/Middle_trim_outer_corner.Middle_trim_outer_corner=1
+/Game/Materials/Lantern.Lantern=1
+/Game/Materials/M_GlowingLantern.M_GlowingLantern=1
+/Game/AP_floorpieces/stone_floor_1x1.stone_floor_1x1=1
+/Game/AP_floorpieces/stone_floor_2x2.stone_floor_2x2=1
+/Game/AP_floorpieces/stone_floor_4x4.stone_floor_4x4=1
+/Game/AP_floorpieces/wood_floor_2x2.wood_floor_2x2=1
+/Game/AP_floorpieces/wood_floor_4x4.wood_floor_4x4=1
+/Game/4x1_door_open.4x1_door_open=1
+/Game/lightpost_fix_polySurface1396.lightpost_fix_polySurface1396=1
+/Game/lightpost_fix_polySurface1390.lightpost_fix_polySurface1390=1
+/Game/AP_Castle/Castletowers/4m_tower_base.4m_tower_base=1
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" "
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" "
@@ -2391,9 +2405,10 @@ BP_GoodSky_C=StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Renderin
 CapsuleComponent=StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 Actor=StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 PlayerStart=StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Brush=StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
